fixed html files

--- a/notebooks/Terminal/Terminal.ipynb
+++ b/notebooks/Terminal/Terminal.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "57d1573b-e0ea-4702-8ad9-98fc89873937",
+   "metadata": {},
+   "source": [
+    "# <a href=\"https://brolo231.github.io/Learning-Notebooks/\">Home Page</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "80aae7d1-c51e-4320-913e-601b9108b389",
    "metadata": {},
    "source": [
