added ds project apple music

--- a/notebooks/Terminal/GitHub_Terminal.ipynb
+++ b/notebooks/Terminal/GitHub_Terminal.ipynb
@@ -113,6 +113,39 @@
     "` git branch -M main ` # Rename default branch to 'main' (optional) \\\n",
     "` git push -u origin main ` # Push the repo to GitHub"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3906365-93f3-4a0d-be22-65d8506d649a",
+   "metadata": {},
+   "source": [
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faa232c5-603a-46d4-b1fd-cda5d57bf9e0",
+   "metadata": {},
+   "source": [
+    "# 6. Force push local to github \n",
+    "\n",
+    "`git push -f originb main` \n",
+    "\n",
+    "# 7. Merge remote and local \n",
+    "\n",
+    "*This command fetches changes from the remote repository and merges them into your local branch.*\n",
+    "\n",
+    "`git pull origin main`\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a58531b6-0836-422c-9b44-8726c8d8bb8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
