updated index.html layout

--- a/notebooks/Machine Learning/linear_algebra.ipynb
+++ b/notebooks/Machine Learning/linear_algebra.ipynb
@@ -31,11 +31,11 @@
     "\n",
     "A vector is an ordered list of numbers that represents a direction and magnitude in space. In 2D:\n",
     "\n",
-    "<strong>V</strong> = \\begin{bmatrix} v_1 \\\\ v_2 \\end{bmatrix}\n",
+    "$V = \\begin{bmatrix} v_1 \\\\ v_2 \\end{bmatrix}$\n",
     "\n",
     "In 3D:\n",
     "\n",
-    "<strong>V</strong> = \\begin{bmatrix} v_1 \\\\ v_2 \\\\ v_3 \\end{bmatrix}\n",
+    "$V = \\begin{bmatrix} v_1 \\\\ v_2 \\\\ v_3 \\end{bmatrix}$\n",
     "\n",
     "Vectors can represent:\n",
     "- Points in space\n",
@@ -58,19 +58,17 @@
     "\n",
     "👉 Linear Combination:\n",
     "\n",
-    "Given vectors $$\\vec{v_1}, \\vec{v_2}, …, \\vec{v_n}$$ a linear combination is:\n",
+    "Given vectors $\\vec{v_1}, \\vec{v_2}, …, \\vec{v_n}$ a linear combination is:\n",
     "\n",
-    "$$a_1\\vec{v_1} + a_2\\vec{v_2} + … + a_n\\vec{v_n}$$\n",
+    "$a_1\\vec{v_1} + a_2\\vec{v_2} + … + a_n\\vec{v_n}$\n",
     "\n",
-    "Where $$a_1, a_2, …, a_n \\in \\mathbb{R}$$ are scalars.\n",
+    "Where $a_1, a_2, …, a_n \\in \\mathbb{R}$ are scalars.\n",
     "\n",
     "Example:\n",
     "\n",
-    "Let:\n",
-    "$$\\vec{v_1} = \\begin{bmatrix} 1 \\\\ 2 \\end{bmatrix},\\quad \\vec{v_2} = \\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix}$$\n",
+    "Let: $\\vec{v_1} = \\begin{bmatrix} 1 \\\\ 2 \\end{bmatrix},\\quad \\vec{v_2} = \\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix}$\n",
     "\n",
-    "Then:\n",
-    "$$3\\vec{v_1} - 1\\vec{v_2} = 3\\begin{bmatrix} 1 \\\\ 2 \\end{bmatrix} - 1\\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix} 3 \\\\ 6 \\end{bmatrix} - \\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix} 1 \\\\ 5 \\end{bmatrix}$$"
+    "Then: $3\\vec{v_1} - 1\\vec{v_2} = 3\\begin{bmatrix} 1 \\\\ 2 \\end{bmatrix} - 1\\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix} 3 \\\\ 6 \\end{bmatrix} - \\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix} 1 \\\\ 5 \\end{bmatrix}$"
    ]
   },
   {
@@ -81,7 +79,7 @@
     "\n",
     "The span of a set of vectors is the set of all possible linear combinations of them.\n",
     "\n",
-    "If $$\\vec{v_1}$$ and $$\\vec{v_2}$$ are 2D vectors not on the same line, their span is the entire 2D plane."
+    "If $\\vec{v_1}$ and $\\vec{v_2}$ are 2D vectors not on the same line, their span is the entire 2D plane."
    ]
   },
   {
@@ -96,7 +94,7 @@
     "\n",
     "Vectors are dependent if one can be written as a combination of the others.\n",
     "\n",
-    "$$\\vec{v_3} = a\\vec{v_1} + b\\vec{v_2}$$\n",
+    "$\\vec{v_3} = a\\vec{v_1} + b\\vec{v_2}$\n",
     "\n",
     "If this is possible, then the vectors are dependent.\n",
     "\n",
@@ -119,15 +117,15 @@
     "\n",
     "👉 Definition:\n",
     "\n",
-    "For vectors $$\\vec{a} = [a_1, a_2, …, a_n]$$ and $$\\vec{b} = [b_1, b_2, …, b_n]$$:\n",
+    "For vectors $\\vec{a} = [a_1, a_2, …, a_n]$ and $\\vec{b} = [b_1, b_2, …, b_n]$:\n",
     "\n",
-    "$$\\vec{a} \\cdot \\vec{b} = a_1b_1 + a_2b_2 + … + a_nb_n$$\n",
+    "$\\vec{a} \\cdot \\vec{b} = a_1b_1 + a_2b_2 + … + a_nb_n$\n",
     "\n",
     "👉 Geometric Form:\n",
     "\n",
-    "$$\\vec{a} \\cdot \\vec{b} = \\|\\vec{a}\\| \\|\\vec{b}\\| \\cos(\\theta)$$\n",
+    "$\\vec{a} \\cdot \\vec{b} = \\|\\vec{a}\\| \\|\\vec{b}\\| \\cos(\\theta)$\n",
     "\n",
-    "Where $$\\theta$$ is the angle between vectors.\n",
+    "Where $\\theta$ is the angle between vectors.\n",
     "\n",
     "🔍 Interpretation:"
    ]
