--- a/notebooks/Data Science/Mathematics/Linear Algebra.ipynb
+++ b/notebooks/Data Science/Mathematics/Linear Algebra.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,13 +17,8 @@
     "- analyzing patterns\n",
     "- developing algorithms\n",
     "- interpreting results\n",
-    "#### ultimately enabling data scientists to extract valuable insights from raw data. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### ultimately enabling data scientists to extract valuable insights from raw data. \n",
+    "\n",
     "<hr>\n",
     "\n",
     "## Vectors and Vector Spaces\n",
@@ -40,20 +36,10 @@
     "Vectors can represent:\n",
     "- Points in space\n",
     "- Features of a data sample\n",
-    "- Directions in geometry"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<hr>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- Directions in geometry\n",
+    "\n",
+    "<hr>\n",
+    "\n",
     "## Linear Combinations and Spans\n",
     "\n",
     "👉 Linear Combination:\n",
@@ -68,24 +54,14 @@
     "\n",
     "Let: $\\vec{v_1} = \\begin{bmatrix} 1 \\\\ 2 \\end{bmatrix},\\quad \\vec{v_2} = \\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix}$\n",
     "\n",
-    "Then: $3\\vec{v_1} - 1\\vec{v_2} = 3\\begin{bmatrix} 1 \\\\ 2 \\end{bmatrix} - 1\\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix} 3 \\\\ 6 \\end{bmatrix} - \\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix} 1 \\\\ 5 \\end{bmatrix}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Then: $3\\vec{v_1} - 1\\vec{v_2} = 3\\begin{bmatrix} 1 \\\\ 2 \\end{bmatrix} - 1\\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix} 3 \\\\ 6 \\end{bmatrix} - \\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix} 1 \\\\ 5 \\end{bmatrix}$\n",
+    "\n",
     "### 📐 Span:\n",
     "\n",
     "The span of a set of vectors is the set of all possible linear combinations of them.\n",
     "\n",
-    "If $\\vec{v_1}$ and $\\vec{v_2}$ are 2D vectors not on the same line, their span is the entire 2D plane."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "If $\\vec{v_1}$ and $\\vec{v_2}$ are 2D vectors not on the same line, their span is the entire 2D plane.\n",
+    "\n",
     "<hr> \n",
     "\n",
     "## Linear Dependence and Independence\n",
@@ -104,13 +80,8 @@
     "\n",
     "✨ Geometric Intuition:\n",
     "- Two vectors in 2D are dependent if they lie on the same line.\n",
-    "- Three vectors in 3D are dependent if they lie in the same plane."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- Three vectors in 3D are dependent if they lie in the same plane.\n",
+    "\n",
     "<hr>\n",
     "\n",
     "## Dot Product\n",
@@ -127,24 +98,15 @@
     "\n",
     "Where $\\theta$ is the angle between vectors.\n",
     "\n",
-    "🔍 Interpretation:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "🔍 Interpretation:\n",
+    "\n",
     "| Result | Meaning                          |\n",
     "|--------|----------------------------------|\n",
     "| > 0    | Vectors point in similar direction |\n",
     "| = 0    | Vectors are perpendicular         |\n",
-    "| < 0    | Vectors point in opposite direction |\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "| < 0    | Vectors point in opposite direction |\n",
+    "\n",
+    "\n",
     "### Real world example: \n",
     "\n",
     "Imagine you’re building a movie recommender system. You want to recommend movies to a user based on how similar their tastes are to a movie’s characteristics.\n",
