--- a/notebooks/Kaggle/2. Extrovert vs Introvert Dataset.ipynb
+++ b/notebooks/Kaggle/2. Extrovert vs Introvert Dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "805b631c-a8e7-4f98-aefe-bb8c3c886753",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "id": "32d43afb-6309-4c6a-842c-f745a3e9a348",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "4                        No                  8.0             5.0   Extrovert  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,6 +407,502 @@
    "source": [
     "df.select_dtypes(include='number').corr()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "742e6c54-8c12-49e7-a4ce-b06f9f3417fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Personality\n",
+       "Extrovert    1491\n",
+       "Introvert    1409\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Personality\"].value_counts(dropna=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "296bd277-9294-4d94-aa97-9c4d1b14b061",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Personality\n",
+       "Extrovert    5.638546\n",
+       "Introvert    1.368918\n",
+       "Name: Post_frequency, dtype: float64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average post rating by personality type\n",
+    "df.groupby(\"Personality\")[\"Post_frequency\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "16679043-8a81-404f-a573-12b4fd7116eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Personality\n",
+       "Extrovert    2.067261\n",
+       "Introvert    7.080435\n",
+       "Name: Time_spent_Alone, dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average alone time by personality type\n",
+    "df.groupby(\"Personality\")[\"Time_spent_Alone\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ab3cadc7-aa2f-48d5-8657-a9adf9dab96d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Personality  Stage_fear\n",
+       "Extrovert    No            1338\n",
+       "             Yes            111\n",
+       "Introvert    Yes           1299\n",
+       "             No              79\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Does stage fear play a role in personality type? \n",
+    "df.groupby(\"Personality\")[\"Stage_fear\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f7ea7d8d-d90e-46da-ac4c-e5b82aabb398",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Personality\n",
+       "Extrovert    9.173673\n",
+       "Introvert    3.196793\n",
+       "Name: Friends_circle_size, dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average friend size of personality type\n",
+    "df.groupby(\"Personality\")[\"Friends_circle_size\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "1e8bc4c6-2858-4355-abcf-24cd5cb1f629",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Personality\n",
+       "Extrovert    15.0\n",
+       "Introvert    14.0\n",
+       "Name: Friends_circle_size, dtype: float64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Largest friend size of personality type\n",
+    "df.groupby(\"Personality\")[\"Friends_circle_size\"].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "006af874-2e25-4d48-be36-353c11f73dc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Personality\n",
+       "Extrovert    0.0\n",
+       "Introvert    0.0\n",
+       "Name: Friends_circle_size, dtype: float64"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Smallest friend size of personality type\n",
+    "df.groupby(\"Personality\")[\"Friends_circle_size\"].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "95af7b44-fa64-44fe-ad6c-53048e589fe3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time_spent_Alone</th>\n",
+       "      <th>Stage_fear</th>\n",
+       "      <th>Social_event_attendance</th>\n",
+       "      <th>Going_outside</th>\n",
+       "      <th>Drained_after_socializing</th>\n",
+       "      <th>Friends_circle_size</th>\n",
+       "      <th>Post_frequency</th>\n",
+       "      <th>Personality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>550</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>720</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>851</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>883</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>912</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>951</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1101</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1439</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1552</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1581</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1859</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1860</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1916</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2106</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2208</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2293</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2457</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2678</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Introvert</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Time_spent_Alone Stage_fear  Social_event_attendance  Going_outside  \\\n",
+       "550                0.0         No                      7.0            4.0   \n",
+       "720                3.0         No                      4.0            4.0   \n",
+       "851                1.0         No                      5.0            4.0   \n",
+       "883                2.0         No                      8.0            6.0   \n",
+       "912                2.0         No                      7.0            6.0   \n",
+       "951                2.0         No                      4.0            5.0   \n",
+       "1101               2.0         No                      7.0            5.0   \n",
+       "1439               2.0         No                      8.0            7.0   \n",
+       "1552               1.0         No                      8.0            7.0   \n",
+       "1581               2.0         No                      8.0            6.0   \n",
+       "1859               0.0         No                      7.0            7.0   \n",
+       "1860               2.0         No                      9.0            5.0   \n",
+       "1916               2.0         No                      7.0            5.0   \n",
+       "2106               0.0         No                      7.0            6.0   \n",
+       "2208               1.0         No                      7.0            5.0   \n",
+       "2293               1.0         No                      9.0            5.0   \n",
+       "2457               0.0         No                      9.0            5.0   \n",
+       "2678               2.0         No                      9.0            7.0   \n",
+       "\n",
+       "     Drained_after_socializing  Friends_circle_size  Post_frequency  \\\n",
+       "550                         No                 14.0             NaN   \n",
+       "720                         No                 14.0             7.0   \n",
+       "851                         No                 14.0             3.0   \n",
+       "883                         No                 14.0             3.0   \n",
+       "912                         No                 14.0             8.0   \n",
+       "951                         No                 14.0             7.0   \n",
+       "1101                        No                 14.0             5.0   \n",
+       "1439                        No                 14.0             7.0   \n",
+       "1552                        No                 14.0             6.0   \n",
+       "1581                        No                 14.0             9.0   \n",
+       "1859                        No                 14.0             8.0   \n",
+       "1860                        No                 14.0             7.0   \n",
+       "1916                        No                 14.0             7.0   \n",
+       "2106                        No                 14.0             7.0   \n",
+       "2208                        No                 14.0             8.0   \n",
+       "2293                        No                 14.0             9.0   \n",
+       "2457                        No                 14.0             9.0   \n",
+       "2678                        No                 14.0             5.0   \n",
+       "\n",
+       "     Personality  \n",
+       "550    Introvert  \n",
+       "720    Introvert  \n",
+       "851    Introvert  \n",
+       "883    Introvert  \n",
+       "912    Introvert  \n",
+       "951    Introvert  \n",
+       "1101   Introvert  \n",
+       "1439   Introvert  \n",
+       "1552   Introvert  \n",
+       "1581   Introvert  \n",
+       "1859   Introvert  \n",
+       "1860   Introvert  \n",
+       "1916   Introvert  \n",
+       "2106   Introvert  \n",
+       "2208   Introvert  \n",
+       "2293   Introvert  \n",
+       "2457   Introvert  \n",
+       "2678   Introvert  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered = df[(df[\"Friends_circle_size\"] == 14) & (df[\"Personality\"] == \"Introvert\")]\n",
+    "filtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ece6cc2-bdc1-438d-8143-563648ecd177",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
