--- a/notebooks/Leetcode/Arrays & Strings.ipynb
+++ b/notebooks/Leetcode/Arrays & Strings.ipynb
@@ -85,6 +85,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "cfe703a4-24a5-4243-81fd-27f9ea0c4918",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trying using O(n) / Hash Map\n",
+    "\n",
+    "class Solution:\n",
+    "    def twoSum(self, nums: list[int], target: [int]) -> list[int]:\n",
+    "\n",
+    "        seen = {}\n",
+    "        for i, value in enumerate(nums):\n",
+    "            if target - nums[i] in seen:\n",
+    "                return i, seen[target - nums[i]]\n",
+    "            seen[nums[i]] = i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "fbe4b3d3-c654-4e21-b175-52117d3aae4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 0)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = Solution()\n",
+    "s.twoSum([2, 4, 3], 5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c8f280e2-c503-46a1-99ba-2e749bae6886",
    "metadata": {},
@@ -136,17 +177,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "49472271-3800-459b-a056-89cf7fbeeb32",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7"
+       "8"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,9 +204,17 @@
     "        return current_highest_profit\n",
     "\n",
     "s = Solution()\n",
-    "s.maxProfit([1,7,6,4,3,1,8])\n",
+    "s.maxProfit([1,7,6,4,3,1,9])\n",
     "\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1a2ec6e-b590-4cca-937f-7b5753a1ada3",
+   "metadata": {},
+   "source": [
+    "### The above solution works. However, with a runtime of $O(n^2)$ the above is insuffiecient to pass leetcode grading"
    ]
   },
   {
