Added custom leetcode problems

--- a/notebooks/03_Coding/Leetcode/Hashing & Sets/217. Contains Duplicate - easy.ipynb
+++ b/notebooks/03_Coding/Leetcode/Hashing & Sets/217. Contains Duplicate - easy.ipynb
@@ -2,13 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db398f77-2a23-4277-8c7a-4d4604bc6382",
+   "id": "a692c0df-de4a-4f55-9170-478db0f6934e",
    "metadata": {},
    "source": [
-    "# Hashing and Sets\n",
-    "\n",
-    "<hr>\n",
-    "\n",
     "## <a href=\"https://leetcode.com/problems/contains-duplicate/description/\">217. Contains duplicate</a>\n",
     "<span style=\"background-color: lightgreen; color: black;\">easy<span>\n",
     "\n",
@@ -46,29 +42,22 @@
     "-109 <= nums[i] <= 109\n",
     "\n",
     "```class Solution:```\\\n",
-    "```    def containsDuplicate(self, nums: List[int]) -> bool:```\n"
+    "```    def containsDuplicate(self, nums: List[int]) -> bool:```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "268cf06c-28ef-4f75-ad27-e24e82aee914",
+   "execution_count": 2,
+   "id": "82799e73-6f10-4020-bed2-9326467349c6",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1: 0, 2: 1, 3: 2}\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "False"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,13 +79,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "137e98da-2b67-44e2-82a7-43db7e9bce8d",
+   "id": "85031374-3c78-4f45-a200-b682d54e871a",
    "metadata": {},
    "source": [
     "***Notes:***\n",
-    "- After running the above in leetcode, I noticed that it was slower and less memory efficient than other submissions. After reviewing solutions I gathered that using a set increases efficiency as well as dramatically improves memory. \n",
-    "- This makes sense becasue a dictionary is storing key-value pairs whereas a set is only storing keys and since the above solution only makes use of the value we can replace value with the \"key\"\n",
-    "- In terms of efficiency I will refer to chatGPT for why the set is faster than the dict.\n",
+    "- After running the above in leetcode, I noticed that it was slower and not as memory efficient as other submissions. After reviewing solutions I gathered that using a set increases efficiency as well as memory. \n",
+    "- This makes sense now becasue a dictionary is storing key-value pairs whereas a set is only storing keys and since the above solution only makes use of the value we can replace value with the \"key\"\n",
     "\n",
     "**chatGPT:** \\\n",
     "\"A set is more appropriate because it’s designed to store unique items and perform fast membership checks (in)\" \\\n",
@@ -105,98 +93,87 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c87f7964-af6e-46f1-99d8-ddf0ad26f79b",
-   "metadata": {},
-   "source": [
-    "<hr>\n",
-    "\n",
-    "## <a href=\"https://leetcode.com/problems/valid-anagram/description/\">242. Valid Anagram</a>\n",
-    "<span style=\"background-color: lightgreen; color: black;\">easy<span>\n",
-    "\n",
-    "Given two strings s and t, return true if t is an anagram of s, and false otherwise.\n",
-    "\n",
-    " \n",
-    "\n",
-    "Example 1:\n",
-    "\n",
-    "```Input: s = \"anagram\", t = \"nagaram\"```\\\n",
-    "```Output: true```\n",
-    "\n",
-    "Example 2:\n",
-    "\n",
-    "```Input: s = \"rat\", t = \"car\"```\\\n",
-    "```Output: false```\n",
-    "\n",
-    " \n",
-    "\n",
-    "Constraints:\n",
-    "\n",
-    "1 <= s.length, t.length <= 5 * 104\n",
-    "s and t consist of lowercase English letters.\n",
-    " \n",
-    "\n",
-    "Follow up: What if the inputs contain Unicode characters? How would you adapt your solution to such a case?\n",
-    "\n",
-    "```class Solution:```\\\n",
-    "```    def isAnagram(self, s: str, t: str) -> bool:```\n",
-    "        "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "c85a842b-571d-499a-9e7b-a11aeceb879f",
+   "execution_count": 3,
+   "id": "ea4bf2c0-e641-4e18-8ea9-aebc4bd064b0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "class Solution:\n",
-    "    def isAnagram(self, s: str, t: str) -> bool:\n",
-    "        if len(s) == len(t):\n",
-    "            for i in s:\n",
-    "                if i in t:\n",
-    "                    continue\n",
-    "                else:\n",
-    "                    return False\n",
-    "            return True\n",
-    "        else:\n",
-    "            return False\n",
+    "    def containsDuplicate(self, nums: list[int]) -> bool:\n",
+    "\n",
+    "        seen = set()\n",
+    "        for idx, value in enumerate(nums):\n",
+    "            if value in seen:\n",
+    "                return True\n",
+    "            seen.add(value)\n",
+    "        return False\n",
     "\n",
     "s = Solution()\n",
-    "s.isAnagram(\"aacc\", \"ccac\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3b7e42b2-bc58-4308-8cc2-cdd5d1071caf",
-   "metadata": {},
-   "source": [
-    "^^ Incorrect\n",
-    "\n",
-    "**Second attempt:** "
+    "s.containsDuplicate([1,2,3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f12a5db8-d49d-4d3d-b5ec-6d69a5658c82",
+   "execution_count": 4,
+   "id": "8f37d739-069a-4d7b-99b4-89baf6e985fd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_answer: 0.07857200000012199\n",
+      "set_answer: 0.03418487500016454\n"
+     ]
+    }
+   ],
    "source": [
+    "import timeit\n",
+    "\n",
+    "dict_answer = '''\n",
     "class Solution:\n",
-    "    def isAnagram(self, s: str, t: str) -> bool:\n",
-    "\n"
+    "    def containsDuplicate(self, nums: list[int]) -> bool:\n",
+    "\n",
+    "        seen = {}\n",
+    "        for idx, value in enumerate(nums):\n",
+    "            if value in seen:\n",
+    "                return True\n",
+    "            seen[value] = idx\n",
+    "        return False\n",
+    "\n",
+    "s = Solution()\n",
+    "s.containsDuplicate([1,2,3])\n",
+    "'''\n",
+    "\n",
+    "set_answer = '''\n",
+    "class Solution:\n",
+    "    def containsDuplicate(self, nums: list[int]) -> bool:\n",
+    "\n",
+    "        seen = set()\n",
+    "        for idx, value in enumerate(nums):\n",
+    "            if value in seen:\n",
+    "                return True\n",
+    "            seen.add(value)\n",
+    "        return False\n",
+    "\n",
+    "s = Solution()\n",
+    "s.containsDuplicate([1,2,3])\n",
+    "'''\n",
+    "\n",
+    "print(\"dict_answer:\", timeit.timeit(stmt=dict_answer, number=10000))\n",
+    "print(\"set_answer:\", timeit.timeit(stmt=set_answer, number=10000))"
    ]
   }
  ],
