--- a/notebooks/04_DevOps_Tools/Terminal/GitHub and Git in the Terminal.ipynb
+++ b/notebooks/04_DevOps_Tools/Terminal/GitHub and Git in the Terminal.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2b72317b-d508-4d19-b511-2ee6311b097f",
+   "metadata": {},
+   "source": [
+    "# <a href='https://brolo231.github.io/Learning-Notebooks/'>Home Page</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2cf0ada9-1d3d-420f-99cb-8a3d9db66775",
    "metadata": {},
    "source": [
@@ -107,12 +115,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a915de2-51bb-4d8e-a3dc-27d187784bc2",
+   "cell_type": "markdown",
+   "id": "a3906365-93f3-4a0d-be22-65d8506d649a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<hr>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "faa232c5-603a-46d4-b1fd-cda5d57bf9e0",
+   "metadata": {},
+   "source": [
+    "# 6. Force push local to github \n",
+    "\n",
+    "`git push -f originb main` \n",
+    "\n",
+    "# 7. Merge remote and local \n",
+    "\n",
+    "*This command fetches changes from the remote repository and merges them into your local branch.*\n",
+    "\n",
+    "`git pull origin main`\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
