--- a/notebooks/03_Coding/Leetcode/Two Pointers/125. Valid Palindrome - easy.ipynb
+++ b/notebooks/03_Coding/Leetcode/Two Pointers/125. Valid Palindrome - easy.ipynb
@@ -2,13 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2a002ba6-8915-4b9c-9ee5-44b13e913c39",
+   "id": "1f507bd9-be05-4fbc-a98e-4cb19364073e",
    "metadata": {},
    "source": [
-    "# Two Pointers\n",
-    "\n",
-    "<hr>\n",
-    "\n",
     "## <a href=\"https://leetcode.com/problems/valid-palindrome/description/\">125. Valid Palindrome</a>\n",
     "<span style=\"background-color: lightgreen; color: black;\">easy<span>\n",
     "\n",
@@ -40,13 +36,13 @@
     "Since an empty string reads the same forward and backward, it is a palindrome.\n",
     "\n",
     "```class Solution:```\\\n",
-    "```    def isPalindrome(self, s: str) -> bool:```\n"
+    "```    def isPalindrome(self, s: str) -> bool:```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "c4c92a7f-b952-4599-8df5-d2e01f532914",
+   "execution_count": 2,
+   "id": "d393fb37-43b2-4eb5-9338-59140397eb72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65bce0c0-da35-44c7-b5c2-19ed09926034",
+   "id": "35e223a5-3c5b-4b7b-9efa-789e1298dae2",
    "metadata": {},
    "source": [
     "- s[0] = '.' → not s[0].isalnum() is True\n",
@@ -102,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "bfe42b16-9a78-48f4-ad90-f4d8afe96fdf",
+   "execution_count": 3,
+   "id": "a8824e28-916f-4b61-a187-ff93b552648b",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +108,7 @@
        "True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,16 +119,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b16e052-cacc-4db0-a31b-b8351637273c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "290189f0-0ea6-42e0-8496-290bac715b9e",
+   "id": "f448b273-6b56-42ef-a160-e4d93d0f0751",
    "metadata": {},
    "source": [
     "<hr>\n",
@@ -142,10 +130,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1dc753f2-0a0b-4f89-900a-c6515b4c7688",
+   "execution_count": 6,
+   "id": "a104b4c2-72ff-4646-810f-c3ab702cbc62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Solution:\n",
     "    def isPalindrome(self, s: str) -> bool:\n",
@@ -166,7 +165,10 @@
     "            left += 1\n",
     "            right -= 1\n",
     "        \n",
-    "        return True"
+    "        return True\n",
+    "\n",
+    "s = Solution()\n",
+    "s.isPalindrome(\"A man, a plan, a canal: Panama\")"
    ]
   }
  ],
