--- a/notebooks/03_Coding/Leetcode/Hashing & Sets/347. Top K Frequent Elements - medium.ipynb
+++ b/notebooks/03_Coding/Leetcode/Hashing & Sets/347. Top K Frequent Elements - medium.ipynb
@@ -34,17 +34,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "2616d9d3-199f-4b02-ad1c-2429a9395009",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "\n",
+    "# Without collections: \n",
+    "# if num not in seen:\n",
+    "#     seen[num] = 0\n",
+    "# seen[num] += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "id": "5663e0b8-fea2-49fc-85c5-1b393ab50725",
    "metadata": {},
    "outputs": [
@@ -52,8 +57,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 2\n",
-      "defaultdict(<class 'int'>, {1: 1, 4: 4, 2: 1, 3: 3})\n"
+      "(1, 3)\n",
+      "(5, 2)\n",
+      "(2, 1)\n",
+      "(3, 3)\n"
      ]
     }
    ],
@@ -63,30 +70,35 @@
     "\n",
     "        seen = defaultdict(int)\n",
     "\n",
-    "        for idx, num in enumerate(nums):\n",
+    "        for num in nums:\n",
     "            seen[num] += 1\n",
     "\n",
-    "        print(max(seen.keys()), k)\n",
+    "        for element in list(seen.items()):\n",
+    "            print(element)\n",
+    "\n",
+    "        # print(list(seen.items()))\n",
+    "\n",
+    "        # for key, value in seen.items():\n",
+    "            \n",
     "        \n",
-    "        print(seen)\n",
     "\n",
     "s = Solution()\n",
-    "s.topKFrequent([1,4,4,4,4,2,3,3,3], 2)"
+    "s.topKFrequent([1,1,1,5,5,2,3,3,3], 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "c913883d-687b-489c-b5ad-b64b05af460a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{3: 2}"
+       "1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
