updated socketio content

--- a/notebooks/05_Web_Development/Flask Socket IO/1. How to setup a simple real time communication socket io web app.ipynb
+++ b/notebooks/05_Web_Development/Flask Socket IO/1. How to setup a simple real time communication socket io web app.ipynb
@@ -85,7 +85,8 @@
     "```});``` \n",
     "- This sets up a listener for an event called 'chat_response'.\n",
     "- Whenever the server emits a 'chat_response' message, this function is triggered.\n",
-    "- It adds the received message as a new <li> item in the <ul> with ID messages.\n",
+    "- It adds the received message as a new li item in the ul with ID messages.\n",
+    "- **<div style=\"color: red;\"> msg is passed the value sent from the backend</div>**\n",
     "\n",
     "🔁 This is what makes the app real-time: when the server broadcasts a message, all connected clients update instantly.\n",
     "\n",
